# srv-cli

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md
libs/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/client/: .gitignore  CMakeLists.txt  client_app.cpp  client_app.hpp  client_main.cpp  logger.cpp  logger.hpp
src/server/: CMakeLists.txt  server_app.cpp  server_app.hpp  server_main.cpp
test/: data.csv
